<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LabsCM20212-Gr06</string>
    <string name="user_name">Nombres</string>
    <string name="user_last_names">Apellidos</string>
    <string name="user_gender">Sexo</string>
    <string name="user_date_of_birth">Fecha de Nacimiento</string>
    <string name="user_level_of_education">Grado de escolaridad</string>
    <string name="user_phone_number">Teléfono</string>
    <string name="user_address">Dirección</string>
    <string name="user_mail">Correo</string>
    <string name="user_country">Pais</string>
    <string name="user_city">Ciudad</string>
    <string name="user_gender_woman">Mujer</string>
    <string name="user_gender_man">Hombre</string>
    <string name="change">Cambiar</string>
    <string name="next">Siguiente</string>
    <string name="personal_information">Información Personal</string>
    <string name="Contact_information">Información de contacto</string>
    <string name="user_error_required">Este campo es obligatorio</string>
    <string-array name="user_array_level_of_education">
        <item>Seleccione</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Univercitaria</item>
        <item>Otro</item>
    </string-array>


</resources>